--- a/eureka/src/main/resources/application.yml
+++ b/eureka/src/main/resources/application.yml
@@ -1,14 +1,13 @@
-
 server:
-  port: 8090
+  port: 8100
   servlet:
-    context-path: "/micrometer"
+    context-path: "/eureka"
 
 management:
   endpoints:
     web:
       exposure:
-        include: health,metrics,loggers,prometheus
+        include: health,metrics,loggers
     enabled-by-default: true
 
 http:
@@ -18,7 +17,7 @@ http:
 
 
 logging:
-  file: log/micrometer.log
+  file: log/eureka.log
   pattern:
     console:  "%d %-5level [req=%-36.36X{requestId}, dsn=%-18X{dsn}] [%-10.10thread] %-40.40logger : %msg%n"
     file:     "%d %-5level [req=%-36.36X{requestId}, dsn=%-18X{dsn}] [%-10.10thread] %-40.40logger : %msg%n"
